--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@
     margin: 0;
     padding: 0;
 }
+header{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))url(https://github.com/hasanbhati/aumad.com/blob/main/Media/background.jpg)
+    height: 100vh;
+    background-position: centre;
+    background-size: cover;
+
+}
