--- a/style.css
+++ b/style.css
@@ -4,17 +4,40 @@
 }
 
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))url("file:///C:/Users/HasanBhati/Desktop/Files/My%20Files/Aumad/aumad.com/Media/background.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))url(C:\aumad.com\Media\background.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
 }
 
-.search{
+.Shortly{
     top: 50%;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
     color: #fff;
     text-align: center;
+    font-family: "Snell Roundhan", cursive;
+}
+
+h1{
+    font-size: 60px;
+    letter-spacing: 15px;
+}
+
+hr{
+    width: 50%;
+    margin: 30px auto;
+    border: 1.5px solid #fff;
+}
+
+p{
+    font-size: 20px;
+    margin-bottom: 30px;
+
+}
+
+.launch{
+    font-size: 40px;
+    word-spacing: 20px;
 }
