--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ header{
     background-size: cover;
 }
 
+body {
+    background: bisque;
+}
+
 .Shortly{
     top: 50%;
     left: 50%;
@@ -34,7 +38,7 @@ hr{
 p{
     font-size: 20px;
     margin-bottom: 30px;
-
+    color: deepskyblue;
 }
 
 .launch{
